<resources>
    <string name="app_name">ButterFlyEffect</string>
    <string name="title">Эффект\nбабочки</string>
    <string name="info">“Говорят, что даже такая мелочь, как взмах крыла бабочки, может, в конце концов, стать причиной тайфуна на другом конце света.“</string>
    <string name="info2">Хотите испытать себя? Проверьте, насколько вы информированы и готовы правильно действовать в условиях эпидемии. Мы предлагаем вам прожить самый обычный день самого обычного человека во время карантина. Правила простые: хорошо обдумывайте свои решения и действуйте так, чтобы максимально снизить риск заражения.</string>
    <string name="begin">Начнем?</string>
    <string name="meet">Для начала давайте познакомимся:</string>
    <string name="next">Далее</string>
    <string name="menu">Меню</string>
    <string name="bedroom_question">Пора на работу, каждое утро одно и то же 7:00…</string>
    <string name="bedroom_answerA">а) Вставать</string>
    <string name="bedroom_answerB">б) Полежать ещё\n10 минут</string>
    <string name="bedroom_end">Теперь точно пора вставать</string>
    <string name="to_bathroom">В ванную</string>
    <string name="bathroom_question">Надо привести себя в порядок</string>
    <string name="bathroom_answerA">а) Средство\nдля умывания</string>
    <string name="bathroom_answerB">б) Жидкое мыло</string>
    <string name="bathroom_answerC">в) Твердое мыло</string>
    <string name="bathroom_answerA_result">О, класс, оно еще не закончилось!</string>
    <string name="bathroom_answerBC_result">Какая разница?</string>
    <string name="bathroom_question2">Выбор полотенца</string>
    <string name="bathroom_answerA2">а) Свежее</string>
    <string name="bathroom_answerB2">б) Вчерашнее</string>
    <string name="bathroom_answerC2">В) Одноразовое</string>
    <string name="bathroom_answerA_result2">Конечно свежее!</string>
    <string name="bathroom_answerB_result2">Оно свежее!</string>
    <string name="bathroom_answerC_result2">Чтобы микробы лишний раз не копились…</string>
    <string name="kitchen_question">Чем бы перекусить?</string>
    <string name="kitchen_answerA">а) Яичница</string>
    <string name="kitchen_answerB">б) Тосты</string>
    <string name="kitchen_answerC">в) Каша</string>
    <string name="kitchen_if_choose_sleep">Нет времени думать!\nЯблоко!</string>
    <string name="wardrobe_A">А)</string>
    <string name="wardrobe_B">Б)</string>
    <string name="wardrobe_C">В)</string>
    <string name="wardrobe_answerA">а) Мачо</string>
    <string name="wardrobe_answerB">б) Победитель половцев</string>
    <string name="wardrobe_answerC">в) Под\nглаза подходит</string>
    <string name="wardrobe_answerA_result">Да я как дурак в маске!</string>
    <string name="wardrobe_answerBC_result">Отлично!</string>
    <string name="entrance_question">Так. В лифте кто-то есть.</string>
    <string name="entrance_answerA">а) Я еще успею войти</string>
    <string name="entrance_answerB">б) Лучше по лестнице</string>
    <string name="elevator">Км… На первый?</string>
    <string name="yes">Да</string>
    <string name="stairs">Можно сказать, что я слежу за фигурой</string>
    <string name="street_question">Хм… А получилось выйти даже раньше обычного</string>
    <string name="street_answerA">а) Пойду прогуляюсь через парк</string>
    <string name="street_answerB">б) Пойду сразу на остановку</string>
    <string name="park">Погода хороша как никогда! Надо будет на шашлыки выбраться</string>
    <string name="stop_question">Какой-то подозрительный дед</string>
    <string name="stop_answerA">а) Отойду лучше метра на полтора</string>
    <string name="stop_answerB">б) Зачем от людей шарахаться?</string>
    <string name="stop_answerA_result">Вы напугали деда</string>
    <string name="stop_answerB_result">Дед вам улыбнулся</string>
    <string name="bus_question">№322? Вроде едет, надо оплатить проезд</string>
    <string name="bus_answerA">а) Оплатить картой</string>
    <string name="bus_answerB">б) Оплатить наличкой</string>
    <string name="bus_answerA_result">Осталось еще на две поездки</string>
    <string name="bus_answerB_result">Заплатил чеканной монетой</string>
    <string name="office_stop_question">Пробок почти не было</string>
    <string name="office_stop_answerA">а) Воспользоваться\nантисептиком\nпосле автобуса</string>
    <string name="office_stop_answerB">б) Не нужно\nни в чем\nфанатизма!</string>
    <string name="office_begin">Офис…</string>
    <string name="office_question">Привет, Имя! Ты сегодня даже не опоздал, дай пожму руку за это</string>
    <string name="office_answerA">а) Отказывать\nне вежливо</string>
    <string name="office_answerB">б) Да я его целые\nвыходные не видел!\nОбнять!</string>
    <string name="office_answerC">в) Просто кивнуть</string>
    <string name="office_answerA_result">Удачного дня!</string>
    <string name="office_answerB_result">Воу, я тоже рад тебя видеть!</string>
    <string name="office_answerC_result">Я тебя понял</string>
    <string name="office_loading">Приступить к работе</string>
    <string name="office_working_question">Чихнуть!!!</string>
    <string name="office_working_answerA">а) В ладонь</string>
    <string name="office_working_answerB">б) В локоть</string>
    <string name="office_working_answerC">в) Чихнуть!</string>
    <string name="office_continue_working">Продолжить работу</string>
    <string name="office_street_question">Наконец закончил, куда теперь?</string>
    <string name="office_street_answerA">а) Пойти домой,\nкарантин все-таки</string>
    <string name="office_street_answerB">б) Зайду в кафе,\nу них вроде бы можно\nвзять еду на вынос</string>
    <string name="office_street_answerC">в) Пятерочка?</string>
    <string name="cafe_question">Итак, у меня 200 монет</string>
    <string name="cafe_answerA">а) Кофе – 50</string>
    <string name="cafe_answerB">б) Пицца – 100</string>
    <string name="cafe_answerC">в) Салат – 90</string>
    <string name="cafe_result">Теперь домой</string>
    <string name="shop_question">Ага, у меня 200 монет</string>
    <string name="shop_answerA">а) Молоко – 50</string>
    <string name="shop_answerB">б) Гречка – 200</string>
    <string name="shop_answerC">в) Лимон – 400</string>
    <string name="shop_answerD">г) Имбирь – 10000</string>
    <string name="shop_answerA_result">Говорят, там много кальция</string>
    <string name="shop_answerB_result">Надо же себя баловать</string>
    <string name="shop_answerC_result">Явно не сегодня</string>
    <string name="shop_answerD_result">Я и за прошлый кредит не отдал</string>
    <string name="buy">Купить</string>
    <string name="home">Домой</string>
    <string name="wardrobe_final_question">Для начала переоденусь и умоюсь</string>
    <string name="wardrobe_final_answerA">а) Думаю пойду\nзавтра в том же</string>
    <string name="wardrobe_final_answerB">б) Отправлю\nсегодняшний\nнаряд в стирку</string>
    <string name="bedroom_final_question">Лягу пожалуй пораньше, сегодня был долгий день</string>
    <string name="bedroom_final_answerA">а) Будильник\nна 7:00</string>
    <string name="bedroom_final_answerB">б) Будильник\nна 7:10</string>
    <string name="bedroom_final_answerC">в) Будильник\nна 7:20</string>
    <string name="final_text">Поздравляем! Вы отлично справились и проявили себя, как ответственный сознательный гражданин. Ваши действия привели к понижению уровня распространения вируса, ученые успеют создать вакцину и спасти всех зараженных.</string>
    <string name="final_text2">Игра создавалась в долгие ночи хакатона Local Hack Day: Save the world</string>
    <string name="final_text3">Над данным проектом работала команда Lamers, а именно: Проскурина Софья Терещенко Сергей Свиридов Данил</string>
    <string name="final_text4">Музыкально сопровождение составленно на основе компазиций из игры UNDERTALE</string>
    <string name="final_text5">Надеемся, что вы получили удовольствие от процесса игры и задумались над важностью соблюдения правил во время эпидемии.</string>
</resources>
