<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wardrobe"
    tools:context=".WardrobeActivity">

    <Button
        android:id="@+id/menu"
        style="@style/MenuButton"
        android:onClick="onMenuClick"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.localhackday.utils.AnimatedTextView
        android:id="@+id/question"
        style="@style/QuestionText"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu" />

    <ImageButton
        android:id="@+id/personA"
        style="@style/PersonImageButton"
        android:layout_marginLeft="16dp"
        android:src="@drawable/person_a"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu" />

    <TextView
        android:id="@+id/personAText"
        style="@style/PersonImageButtonText"
        android:text="@string/wardrobe_A"
        app:layout_constraintLeft_toLeftOf="@id/personA"
        app:layout_constraintTop_toTopOf="@id/personA" />

    <ImageButton
        android:id="@+id/personB"
        style="@style/PersonImageButton"
        android:layout_marginRight="16dp"
        android:src="@drawable/person_b"
        app:layout_constraintBottom_toTopOf="@id/answerA"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu" />

    <TextView
        android:id="@+id/personBText"
        style="@style/PersonImageButtonText"
        android:text="@string/wardrobe_B"
        app:layout_constraintLeft_toLeftOf="@id/personB"
        app:layout_constraintTop_toTopOf="@id/personB" />

    <ImageButton
        android:id="@+id/personC"
        style="@style/PersonImageButton"
        android:layout_marginLeft="16dp"
        android:src="@drawable/person_c"
        app:layout_constraintBottom_toTopOf="@id/answerA"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personA" />

    <TextView
        android:id="@+id/personCText"
        style="@style/PersonImageButtonText"
        android:text="@string/wardrobe_C"
        app:layout_constraintLeft_toLeftOf="@id/personC"
        app:layout_constraintTop_toTopOf="@id/personC" />

    <Button
        android:id="@+id/answerA"
        style="@style/BottomButton"
        android:onClick="onAnswerAClick"
        android:text="@string/wardrobe_answerA"
        app:layout_constraintBottom_toTopOf="@id/answerB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/answerB"
        style="@style/BottomButton"
        android:onClick="onAnswerBClick"
        android:text="@string/wardrobe_answerB"
        app:layout_constraintBottom_toTopOf="@id/answerC"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/answerC"
        style="@style/BottomButton"
        android:onClick="onAnswerCClick"
        android:text="@string/wardrobe_answerC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>